home: replace icon with profile image component and load user avatar

--- a/web/static/home.html
+++ b/web/static/home.html
@@ -35,7 +35,10 @@
   <a href="profile.html">
     <div class="profile">
       <div class="username" id="username">Usuario</div>
-      <i class="bi bi-person-circle"></i>
+      <div class="profile-image-preview" id="homeProfileImagePreview">
+        <i class="bi bi-person" id="homeProfileIcon"></i>
+        <img id="homeProfileImage" alt="Profile image" loading="eager" decoding="async">
+      </div>
       <div class="hidden-text">PROFILE</div>
        <button class="logout-btn" id="logoutBtn">Cerrar Sesión</button>
     </div>
