home: add Admin button (left) visible only for staff/superuser; prevent anchor conflicts

--- a/web/static/home.html
+++ b/web/static/home.html
@@ -34,6 +34,7 @@
   <!-- Perfil -->
   <a href="profile.html">
     <div class="profile">
+      <button class="admin-btn" id="adminBtn" style="display:none" title="Administración">Admin</button>
       <div class="username" id="username">Usuario</div>
       <div class="profile-image-preview" id="homeProfileImagePreview">
         <i class="bi bi-person" id="homeProfileIcon"></i>
