Recover-password: 8-digits, Spanish texts, Procfile cleanup, migration

--- a/web/static/new-password.html
+++ b/web/static/new-password.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nueva Contraseña</title>
+<title>Nueva Contrasena</title>
 <link rel="stylesheet" href="css/password.css"/>
 </head>
 <body>
 <div class="contenedor-padre">
     <div class="contenedor">
-        <h2>Ingresa Nueva Contraseña</h2>
+        <h2>Ingresa Nueva Contrasena</h2>
         <form id="newPassForm">
             <div class="credentials">
-                <label for="newPassword">Nueva Contraseña</label><br>
-                <input type="password" id="newPassword" required placeholder="Nueva contraseña">
+                <label for="newPassword">Nueva Contrasena</label><br>
+                <input type="password" id="newPassword" required placeholder="Nueva contrasena">
             </div>
             <div class="credentials">
-                <label for="confirmPassword">Reingresa Contraseña</label><br>
-                <input type="password" id="confirmPassword" required placeholder="Confirma tu contraseña">
+                <label for="confirmPassword">Reingresa Contrasena</label><br>
+                <input type="password" id="confirmPassword" required placeholder="Confirma tu contrasena">
             </div>
             <div class="button">
-                <input type="submit" value="Cambiar Contraseña">
+                <input type="submit" value="Cambiar Contrasena">
             </div>
         </form>
         <div id="message" style="margin-top:10px;font-weight:bold;"></div>
     </div>
+    
 </div>
 
 <script src="js/config.js"></script>
