--- a/web/static/recover-password.html
+++ b/web/static/recover-password.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recuperar Contraseña</title>
+  <title>Recuperar Contrasena</title>
   <link rel="stylesheet" href="css/password.css"/>
 </head>
 <body>
   <div class="contenedor-padre">
     <div class="contenedor">
-      <h2>Recuperar Contraseña</h2>
+      <h2>Recuperar Contrasena</h2>
 
       <form id="resetForm">
         <div class="credentials">
-          <label for="usuario">EMAIL</label><br>
+          <label for="usuario">Email</label><br>
           <input type="email" id="usuario" name="usuario" required placeholder="ejemplo@gmail.com">
         </div>
         <div class="button">
-          <input type="submit" value="Enviar Código">
+          <input type="submit" value="Enviar Codigo">
         </div>
       </form>
 
