--- a/web/static/verify-code.html
+++ b/web/static/verify-code.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verificar Código</title>
-    <link rel="stylesheet" href="css\password.css"/>
+    <link rel="stylesheet" href="css/password.css"/>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'">
+    <meta name="referrer" content="no-referrer">
+    <meta name="color-scheme" content="light dark">
+    <meta name="robots" content="noindex,nofollow">
 </head>
 <body>
     <div class="contenedor-padre">
@@ -13,7 +17,7 @@
             <form id="verifyForm">
                 <div class="credentials">
                     <label for="code">Código</label><br>
-                    <input type="text" id="code" name="code" required placeholder="Código de 6 dígitos">
+                    <input type="text" id="code" name="code" required placeholder="Código de 8 dígitos">
                 </div>
                 <div class="button">
                     <input type="submit" value="Verificar Código">
@@ -23,7 +27,6 @@
         </div>
     </div>
 
-    <!-- Asociamos el JS externo -->
     <script src="js/config.js"></script>
     <script src="js/verify-code.js"></script>
 </body>
