Signup UI: add verify link + inline messages; clean signup.js

--- a/web/static/signup.html
+++ b/web/static/signup.html
@@ -57,12 +57,17 @@
                 <label for="confirm-password">Confirm Password:</label>
                 <input type="password" id="confirm-password" name="confirm-password">
             </div>
+            <div id="message" style="margin-top:10px;font-weight:bold;"></div>
         </div>
 
         <!-- Contenedor del botón -->
         <div class="button-container">
             <input type="button" value="Sign Up" id="signup-btn">
         </div>
+    </div>
+
+    <div style="text-align:center; margin-top:14px;">
+      <a href="verify-signup.html">Ya tengo un codigo de verificacion</a>
     </div>
 
     <!-- Script JS externo -->
