Wallet: wire up JS, fix CSS path, center layout + responsive top bar and buttons

--- a/web/static/wallet.html
+++ b/web/static/wallet.html
@@ -20,7 +20,7 @@
         <div class="contenedor">
             <div class="username">
                 <i class="bi bi-person-circle"></i>
-                <h2>NAME</h2>
+                <h2 id="walletUsername">Nombre</h2>
             </div>
             <h3>Wallet  Management</h3>
              <div class="button">
@@ -31,5 +31,7 @@
             </div>
         </div>
     </div>
+    <script src="js/config.js"></script>
+    <script src="js/wallet.js"></script>
 </body>
 </html>
