Wallet: import general.css; add avatar preview + profile image fetch; responsive tweaks

--- a/web/static/wallet.html
+++ b/web/static/wallet.html
@@ -19,7 +19,10 @@
     <div class="contenedor-padre">
         <div class="contenedor">
             <div class="username">
-                <i class="bi bi-person-circle"></i>
+                <div class="profile-image-preview">
+                    <i class="bi bi-person" id="walletProfileIcon"></i>
+                    <img id="walletProfileImage" alt="Profile image" loading="eager" decoding="async">
+                </div>
                 <h2 id="walletUsername">Nombre</h2>
             </div>
             <h3>Wallet  Management</h3>
