--- a/web/static/profile.html
+++ b/web/static/profile.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
+  <div class="top-bar">
+    <img src="icons/backArrow.png" alt="Back" class="backArrow" onclick="history.back()">
+    <a href="home.html" class="home-icon"><i class="bi bi-house-fill"></i></a>
+  </div>
   <!-- Modal confirmación -->
   <div id="confirmModal" class="modal">
     <div class="modal-content">
