--- a/web/static/income.html
+++ b/web/static/income.html
@@ -120,8 +120,8 @@
         </div>
     </div>     
     
-    <script src="js/config.js"></script>
-    <script src="js/income.js"></script>
+     <!--<script src="js/config.js"></script>
+    <script src="js/income.js"></script> -->
 
 </body>
 </html>
